# LINDA

./: .gitignore  LICENSE  README.md  pyproject.toml
linda/metrics/: __init__.py  classification.py
linda/models/: __init__.py  tabular.py  utils.py
melinda/metrics/: classification.py  test_stand.py
melinda/models/: __init__.py  tabular.py
tests/: test_models.py
