[tool.poetry]
name = "melinda"
version = "0.1.1"
description = "Synthetic data generation."
readme = "README.md"
authors = ["Mikhail Hushchyn <hushchyn.mikhail@gmail.com>"]
repository = "https://github.com/HSE-LAMBDA/LINDA"
license = "MIT"

keywords = ["synthetic data", "augmentation", "generative models", "tabular data"]

[tool.poetry.dependencies]
python = "^3.8"
probaforms = "0.2.0"
jupyterlab = "4.0.5"
sdmetrics = "0.11.0"
plotly = "5.16.1"
kaleido = "0.2.1"
scikit-learn = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"